--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -72,7 +72,7 @@ body {
     outline: none;
     border: none;
     background: #1d1b31;
-    padding-left: 18px;
+    padding-left: 3rem;
     color: #fff;
 }
 
@@ -80,8 +80,9 @@ body {
     position: absolute;
     z-index: 99;
     color: #fff;
-    font-size: 22px;
+    font-size: 20px;
 }
+
 .sidebar ul li a {
     color: #fff;
     display: flex;
@@ -96,13 +97,14 @@ body {
     background: #fff;
 }
 
-.sidebar ul li i{
+.sidebar ul li i {
     height: 50px;
     min-width: 50px;
     border-radius: 12px;
     line-height: 50px;
     text-align: center;
 }
+
 .sidebar .profile_content {
     position: absolute;
     color: #fff;
@@ -118,7 +120,7 @@ body {
     background: #1d1b31;
 }
 
-.profile_content .profile .profile_details{
+.profile_content .profile .profile_details {
     display: flex;
     align-items: center;
 }
@@ -142,6 +144,7 @@ body {
 .profile .profile_details .job {
     font-size: 12px;
 }
+
 .profile #log_out {
     position: absolute;
     left: 88%;
@@ -151,4 +154,18 @@ body {
     line-height: 50px;
     font-size: 20px;
     border-radius: 12px;
+}
+
+.home_content {
+    position: absolute;
+    height: 100%;
+    width: calc(100% - 240px);
+    left: 240px;
+}
+
+.home_content .text {
+    font-size: 25px;
+    font-weight: 500;
+    color: #1d1b31;
+    margin: 12px;
 }
